add inner pages (faq, site-map, privacy, design, technical-supervision)

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,7 +1,7 @@
 <!--=include header.html-->
 <!--=include sprite.html-->
 <main class="main">
-  <div class="hero">
+  <div class="hero block">
     <div class="container-fluid">
       <div class="hero__inner" style="background-image: url(images/hero.png)">
         <div class="hero__content">
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <div class="case">
+  <div class="case block">
     <div class="container">
       <div class="case__inner">
         <div class="case__head">
@@ -502,7 +502,7 @@
     </div>
   </div>
 
-  <div class="banner">
+  <div class="banner block">
     <div class="container">
       <div class="banner__inner" style="background-image: url(images/banner.png);">
         <div class="banner__item">
@@ -518,7 +518,7 @@
     </div>
   </div>
 
-  <div class="advantages">
+  <div class="advantages block">
     <div class="container">
       <div class="advantages__inner">
         <div class="advantages__head">
@@ -718,7 +718,7 @@
     </div>
   </div>
 
-  <div class="discount">
+  <div class="discount block">
     <div class="container">
       <div class="discount__inner" style="background-image: url(images/discount-texture.png);">
         <div class="discount__item">
@@ -734,7 +734,7 @@
     </div>
   </div>
 
-  <div class="projects">
+  <div class="projects block">
     <div class="container">
       <div class="projects__inner">
         <div class="projects__head">
@@ -874,7 +874,7 @@
     </div>
   </div>
 
-  <div class="payment">
+  <div class="payment block">
     <img class="decor" src="images/decor-top-light.png" alt="">
     <div class="container">
       <div class="payment__inner">
@@ -912,7 +912,7 @@
     </div>
   </div>
 
-  <div class="map">
+  <div class="map block">
     <div class="container">
       <div class="map__inner">
         <div class="map__content">
@@ -1013,7 +1013,7 @@
     </div>
   </div>
 
-  <div class="callback">
+  <div class="callback block">
     <div class="container">
       <div class="callback__inner" style="background-image: url(images/discount-texture.png);">
         <div class="callback__item">
@@ -1029,7 +1029,7 @@
     </div>
   </div>
 
-  <div class="faq">
+  <div class="faq block">
     <div class="container">
       <div class="faq__inner">
         <div class="faq__head">
