add inner pages (faq, site-map, privacy, design, technical-supervision)

--- a/app/pages/technical-supervision.html
+++ b/app/pages/technical-supervision.html
@@ -57,36 +57,30 @@
         </h5>
         <ul class="supervision-advantages__list">
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="url(images/supervision-arrow.svg" )
-              alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/supervision-arrow.svg" alt="arrow">
             <p class="supervision-advantages__item-text">Проверить качество и объем строительных работ</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="url(images/supervision-arrow.svg" )
-              alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/supervision-arrow.svg" alt="arrow">
             <p class="supervision-advantages__item-text">Построить и ввести объект в заданный срок, без простоев</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="url(images/supervision-arrow.svg" )
-              alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/supervision-arrow.svg" alt="arrow">
             <p class="supervision-advantages__item-text">Избежать дополнительных затрат на строительные материалы и
               услуги</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="url(images/supervision-arrow.svg" )
-              alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/supervision-arrow.svg" alt="arrow">
             <p class="supervision-advantages__item-text">Узаконить уже сделанную перепланировку и свести штраф к
               минимуму</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="url(images/supervision-arrow.svg" )
-              alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/supervision-arrow.svg" alt="arrow">
             <p class="supervision-advantages__item-text">Быстро и по закону сделать перепланировку квартиры и избежать
               штрафа</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="url(images/supervision-arrow.svg" )
-              alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/supervision-arrow.svg" alt="arrow">
             <p class="supervision-advantages__item-text">Проверить качество и сэкономить деньги при приемке квартиры в
               новостройке</p>
           </li>
