create Works page & add script & dropdown

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <div class="case block">
+  <div class="case">
     <div class="container">
       <div class="case__inner">
         <div class="case__head">
@@ -491,7 +491,7 @@
             <div class="calculation__banner">
               <div class="calculation__banner-item">
                 <h6 class="small">Предварительная стоимость</h6>
-                <h3 id="pre-price">7 500 000 ₽</h3>
+                <h3 id="pre-price">₽</h3>
               </div>
               <button class="btn-green">Получить консультацию</button>
             </div>
@@ -529,7 +529,9 @@
         </div>
 
         <div class="advantages__block">
-          <img class="advantages__img" src="images/advantages-cover1.png" alt="cover">
+          <div class="advantages__cover">
+            <img class="advantages__img" src="images/advantages-cover1.png" alt="cover">
+          </div>
 
           <ul class="advantages__list">
             <li class="advantages__item">
@@ -586,8 +588,9 @@
               </div>
             </li>
           </ul>
-
-          <img src="images/advantages-cover2.png" alt="cover" class="advantages__img">
+          <div class="advantages__cover">
+            <img class="advantages__img" src="images/advantages-cover2.png" alt="cover">
+          </div>
         </div>
       </div>
     </div>
