--- a/services.html
+++ b/services.html
@@ -246,290 +246,122 @@
           <li class="breadcrumbs__item">
             <a href="#!" class="breadcrumbs__link">Услуги</a>
           </li>
-          <li class="breadcrumbs__item">
-            <svg class="breadcrumbs__arrow">
-              <use xlink:href="#breadcrumbs-arrow"></use>
-            </svg>
-          </li>
-          <li class="breadcrumbs__item">
-            <a href="#!" class="breadcrumbs__link">Проектирование</a>
-          </li>
         </ul>
       </div>
-      <h2 class="title">Проектирование</h2>
+      <h2 class="title">Услуги</h2>
     </div>
   </div>
 
-  <div class="supervision block">
+  <div class="services block">
     <div class="container">
-      <div class="supervision__inner">
-        <div class="supervision__content">
-          <h5 class="supervision__text">Проектирование — это процесс, направленный на определение важных характеристик
-            объекта и его составляющих путём детализации и дополнения имеющихся сведений, составления расчётов
-            и принятия решений по оптимизации первоначальных характеристик объекта. Итогом проектирования является
-            проект — технически обоснованная и экономически эффективная модель возведения или реконструкции объекта.
-          </h5>
-          <button class="btn-green">Заказать звонок</button>
+      <div class="services__inner">
+
+        <div class="services__items">
+          <div class="services__item">
+            <div class="services__item-block">
+              <img class="services__item-img" src="images/services-1.png" alt="Индивидуальное проектирование">
+              <h3 class="services__item-title">Индивидуальное проектирование</h3>
+            </div>
+            <p class="services__item-text">Индивидуальное архитектурное проектирование современных жилых домов
+              и коттеджей в Москве</p>
+            <button class="btn-green menu-1">Перейти к услуге</button>
+          </div>
+          <div class="services__item">
+            <div class="services__item-block">
+              <img class="services__item-img" src="images/services-2.png" alt="Технический надзор">
+              <h3 class="services__item-title">Технический надзор</h3>
+            </div>
+            <p class="services__item-text">Оказываем профессиональные услуги по ведению технического надзора
+              за строительством в Минске</p>
+            <button class="btn-green menu-1">Перейти к услуге</button>
+          </div>
+          <div class="services__item">
+            <div class="services__item-block">
+              <img class="services__item-img" src="images/services-1.png" alt="Барбекю, бани, беседки, заборы">
+              <h3 class="services__item-title">Барбекю, бани, беседки, заборы</h3>
+            </div>
+            <p class="services__item-text">Если есть желание сделать свой дом или загородный участок уютным
+              и функциональным, мы вам поможем</p>
+            <button class="btn-green menu-1">Перейти к услуге</button>
+          </div>
         </div>
-        <img class="supervision__img" src="images/design-cover.png" alt="cover">
+
       </div>
     </div>
   </div>
 
-  <div class="design-types">
+  <div class="construction block">
     <div class="container">
-      <div class="design-types__inner">
-        <h2 class="design-types__title">Виды проектирования</h2>
-        <h5 class="design-types__suptitle">
-          В связи с разнообразием строительных задач и их отраслевой спецификой существует многочисленное количество
-          видов проектирования.
-        </h5>
-        <ul class="design-types__list">
-          <h3>В зависимости от строительных задач выделяют:</h3>
-          <li class="design-types__item">
-            <img class="design-types__item-img" src="images/supervision-arrow.svg" alt="arrow">
-            <p class="design-types__item-text">Проверить качество и объем строительных работ</p>
-          </li>
-          <li class="design-types__item">
-            <img class="design-types__item-img" src="images/supervision-arrow.svg" alt="arrow">
-            <p class="design-types__item-text">Построить и ввести объект в заданный срок, без простоев</p>
-          </li>
-          <li class="design-types__item">
-            <img class="design-types__item-img" src="images/supervision-arrow.svg" alt="arrow">
-            <p class="design-types__item-text">Избежать дополнительных затрат на строительные материалы и
-              услуги</p>
-          </li>
-          <li class="design-types__item">
-            <img class="design-types__item-img" src="images/supervision-arrow.svg" alt="arrow">
-            <p class="design-types__item-text">Узаконить уже сделанную перепланировку и свести штраф к
-              минимуму</p>
-          </li>
-          <li class="design-types__item">
-            <img class="design-types__item-img" src="images/supervision-arrow.svg" alt="arrow">
-            <p class="design-types__item-text">Быстро и по закону сделать перепланировку квартиры и избежать
-              штрафа</p>
-          </li>
-          <li class="design-types__item">
-            <img class="design-types__item-img" src="images/supervision-arrow.svg" alt="arrow">
-            <p class="design-types__item-text">Проверить качество и сэкономить деньги при приемке квартиры в
-              новостройке</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+      <div class="construction__inner">
+        <h2 class="title">Строительство</h2>
 
-  <div class="design-composition">
-    <div class="container">
-      <div class="design-composition__inner">
-        <div class="design-composition__head">
-          <h2 class="design-composition__title">Состав проектной документации</h2>
-          <h5 class="design-composition__suptitle">Комплект документации, разрабатываемой при проектировании зданий,
-            может содержать такие основные разделы:</h5>
-        </div>
-
-        <div class="design-composition__items">
-          <div class="design-composition__item">
-            <span class="design-composition__item-num">01</span>
-            <h3 class="design-composition__item-title">Эскизный проект</h3>
-            <p class="design-composition__item-text">Набор предварительных эскизов здания и его элементов. Эскизы – это
-              упрощенные рисунки, схемы, наброски архитектурных и конструктивных объектов. Эскизный проект используется
-              для выработки и согласования с заказчиком основных архитектурных, конструктивных, инженерных и
-              дизайнерских решений, внесения правок.
-            </p>
-          </div>
-          <div class="design-composition__item">
-            <span class="design-composition__item-num">02</span>
-            <h3 class="design-composition__item-title">Проектная документация</h3>
-            <p class="design-composition__item-text">Основная часть проекта, в которой определяются
-              инженерно-технические, технологические, конструктивные решения будущего здания. Этот раздел проходит
-              экспертизу и согласования, используется для оформления разрешения на строительство.
-            </p>
-          </div>
-          <div class="design-composition__item">
-            <span class="design-composition__item-num">03</span>
-            <h3 class="design-composition__item-title">Рабочий проект</h3>
-            <p class="design-composition__item-text">Включает схема и чертежи конструкций, которые непосредственно
-              используются строителями при возведении здания и выполнении монтажных работ.
-            </p>
-          </div>
-        </div>
-
-        <p class="design-composition__text">Документы на проектирование содержат материалы текстовой и графической
-          форме. Текстовая часть содержит расчеты, пояснительную записку, ссылочные и другие материалы. В графической
-          части приводятся чертежи и схемы зданий, входящих в состав проектируемого комплекса, конструктивных элементов,
-          инженерных коммуникаций, планы ландшафта и другие документы.</p>
-
-        <button class="btn-green">Получить консультацию</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="design-stages block">
-    <div class="container">
-      <div class="design-stages__inner">
-        <div class="design-stages__content">
-          <h2 class="design-stages__title">Стадии проектирования</h2>
-          <h5 class="design-stages__suptitle">
-            Выше мы уже перечислили нормативные акты, регулирующие деятельность проектной организации. Согласно
-            национальным стандартам последовательность проектирования любого объекта или системы выполняется в несколько
-            этапов.
-          </h5>
-          <ul class="design-stages__list">
-            <h3>Основные этапы проектирования:</h3>
-            <li class="design-stages__item">
-              <img class="design-stages__item-img" src="images/supervision-arrow.svg" alt="arrow">
-              <p class="design-stages__item-text">предпроектная работа;</p>
-            </li>
-            <li class="design-stages__item">
-              <img class="design-stages__item-img" src="images/supervision-arrow.svg" alt="arrow">
-              <p class="design-stages__item-text">проект;</p>
-            </li>
-            <li class="design-stages__item">
-              <img class="design-stages__item-img" src="images/supervision-arrow.svg" alt="arrow">
-              <p class="design-stages__item-text">рабочая документация.</p>
-            </li>
-          </ul>
-        </div>
-        <img src="images/design-stages.png" alt="" class="design-stages__img">
-      </div>
-    </div>
-  </div>
-
-  <div class="command block">
-    <div class="container">
-      <div class="command__inner">
-        <div class="command__head">
-          <h2 class="command__title">Наша команда</h2>
-          <h5 class="command__suptitle">Мы ценим ваше доверие и не прячем своих лиц</h5>
-        </div>
-        <div class="command__slider">
-          <div class="command__slider-item">
-            <div class="command__item">
-              <div class="command__item-block">
-                <img class="command__item-photo" src="images/command-person-1.png" alt="photo">
-                <div class="command__item-name">
-                  <h6 class="menu-1">Василий</h6>
-                  <h3>Ермаков</h3>
-                </div>
-              </div>
-              <p class="command__item-desc">
-                Прораб, высшее архитектурно-строительное образование
-              </p>
+        <div class="construction__items">
+          <div class="construction__item">
+            <div class="construction__item-block">
+              <img class="construction__item-img" src="images/construction-1.png" alt="construction">
+              <h3 class="construction__item-title">Проектирование</h3>
             </div>
+            <button class="btn-grey menu-1">Подробнее</button>
           </div>
-          <div class="command__slider-item">
-            <div class="command__item">
-              <div class="command__item-block">
-                <img class="command__item-photo" src="images/command-person-2.png" alt="photo">
-                <div class="command__item-name">
-                  <h6 class="menu-1">Андрей</h6>
-                  <h3>Попов</h3>
-                </div>
-              </div>
-              <p class="command__item-desc">
-                Главный архитектор, высшее строительное образование
-              </p>
+          <div class="construction__item">
+            <div class="construction__item-block">
+              <img class="construction__item-img" src="images/construction-2.png" alt="construction">
+              <h3 class="construction__item-title">Производство дома</h3>
             </div>
+            <button class="btn-grey menu-1">Подробнее</button>
           </div>
-          <div class="command__slider-item">
-            <div class="command__item">
-              <div class="command__item-block">
-                <img class="command__item-photo" src="images/command-person-3.png" alt="photo">
-                <div class="command__item-name">
-                  <h6 class="menu-1">Маргарита</h6>
-                  <h3>Алексеева</h3>
-                </div>
-              </div>
-              <p class="command__item-desc">
-                Архитектор, высшее архитектурно-строительное образование
-              </p>
+          <div class="construction__item">
+            <div class="construction__item-block">
+              <img class="construction__item-img" src="images/construction-3.png" alt="construction">
+              <h3 class="construction__item-title">Фундамент</h3>
             </div>
+            <button class="btn-grey menu-1">Подробнее</button>
           </div>
-          <div class="command__slider-item">
-            <div class="command__item">
-              <div class="command__item-block">
-                <img class="command__item-photo" src="images/command-person-1.png" alt="photo">
-                <div class="command__item-name">
-                  <h6 class="menu-1">Василий</h6>
-                  <h3>Ермаков</h3>
-                </div>
-              </div>
-              <p class="command__item-desc">
-                Прораб, высшее архитектурно-строительное образование
-              </p>
+          <div class="construction__item">
+            <div class="construction__item-block">
+              <img class="construction__item-img" src="images/construction-4.png" alt="construction">
+              <h3 class="construction__item-title">Каркас</h3>
             </div>
+            <button class="btn-grey menu-1">Подробнее</button>
           </div>
-          <div class="command__slider-item">
-            <div class="command__item">
-              <div class="command__item-block">
-                <img class="command__item-photo" src="images/command-person-2.png" alt="photo">
-                <div class="command__item-name">
-                  <h6 class="menu-1">Андрей</h6>
-                  <h3>Попов</h3>
-                </div>
-              </div>
-              <p class="command__item-desc">
-                Главный архитектор, высшее строительное образование
-              </p>
+          <div class="construction__item">
+            <div class="construction__item-block">
+              <img class="construction__item-img" src="images/construction-5.png" alt="construction">
+              <h3 class="construction__item-title">Кровельные работы</h3>
             </div>
+            <button class="btn-grey menu-1">Подробнее</button>
           </div>
-          <div class="command__slider-item">
-            <div class="command__item">
-              <div class="command__item-block">
-                <img class="command__item-photo" src="images/command-person-3.png" alt="photo">
-                <div class="command__item-name">
-                  <h6 class="menu-1">Маргарита</h6>
-                  <h3>Алексеева</h3>
-                </div>
-              </div>
-              <p class="command__item-desc">
-                Архитектор, высшее архитектурно-строительное образование
-              </p>
+          <div class="construction__item">
+            <div class="construction__item-block">
+              <img class="construction__item-img" src="images/construction-6.png" alt="construction">
+              <h3 class="construction__item-title">Отделочные работы</h3>
             </div>
+            <button class="btn-grey menu-1">Подробнее</button>
+          </div>
+          <div class="construction__item">
+            <div class="construction__item-block">
+              <img class="construction__item-img" src="images/construction-7.png" alt="construction">
+              <h3 class="construction__item-title">Инженерные коммуникации</h3>
+            </div>
+            <button class="btn-grey menu-1">Подробнее</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="why block">
+  <div class="services-desc block">
     <div class="container">
-      <div class="why__inner">
-        <div class="why__content">
-          <h2 class="why__title">Зачем мне платить за то, что я могу сделать самостоятельно</h2>
-          <p>незачем. вы запросто справитесь и с согласованием перепланировки и с приемкой новой квартиры и еще много с
-            чем… но тогда вам обязательно надо знать некоторые подводные камни, с которыми вы обязательно столкнетесь в
-            процессе</p>
-          <button class="btn-green">Получить консультацию</button>
-        </div>
-        <img class="why__img" src="images/helmet.png" alt="helmet">
-      </div>
-    </div>
-  </div>
-
-  <div class="licenses block">
-    <div class="container">
-      <div class="licenses__inner">
-        <div class="licenses__head">
-          <h2 class="licenses__title">Лицензии и сертификаты</h2>
-          <h5 class="licenses__suptitle">Все любят хвастаться сертификатами, тыкать при каждом удобном случае. У нас они
-            тоже есть и много</h5>
-        </div>
-        <div class="licenses__items">
-          <div class="licenses__item">
-            <img class="licenses__item-img" src="images/licenses-1.png" alt="licenses">
-            <h6 class="licenses__item-name small">Небольшое название данного письма</h6>
-          </div>
-          <div class="licenses__item">
-            <img class="licenses__item-img" src="images/licenses-2.png" alt="licenses">
-            <h6 class="licenses__item-name small">Небольшое название данного письма</h6>
-          </div>
-          <div class="licenses__item">
-            <img class="licenses__item-img" src="images/licenses-3.png" alt="licenses">
-            <h6 class="licenses__item-name small">Небольшое название данного письма</h6>
-          </div>
-        </div>
+      <div class="services-desc__inner">
+        <p class="services-desc__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+          несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык
+          публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
+          универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце,
+          что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
+        <p class="services-desc__text">
+          По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей
+          недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит
+          любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
       </div>
     </div>
   </div>
@@ -549,7 +381,6 @@
       </div>
     </div>
   </div>
-
 </main>
 <footer class="footer">
   <div class="container">
