add works page & create filter script

--- a/app/pages/works.html
+++ b/app/pages/works.html
@@ -25,58 +25,47 @@
   <div class="works block">
     <div class="container">
       <div class="works__inner">
+
         <div class="filter">
           <div class="filter__items">
-            <div class="dropdown filter__item">
-              <button class="filter__btn small">Одноэтажные дома
-                <svg class="faq__item-arrow">
-                  <use xlink:href="#faq-arrow"></use>
-                </svg>
-              </button>
-              <ul class="dropdown__list">
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">Одноэтажные дома</a>
+            <div class="filter__item">
+              <button class="filter__btn small" data-value="Одноэтажные дома">Одноэтажные дома</button>
+              <ul class="filter__list">
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="Одноэтажные дома">Одноэтажные дома</a>
                 </li>
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">Двухэтажные дома</a>
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="Двухэтажные дома">Двухэтажные дома</a>
                 </li>
               </ul>
             </div>
           </div>
           <div class="filter__items">
-            <div class="dropdown filter__item">
-              <button class="filter__btn small">По дате добавления
-                <svg class="faq__item-arrow">
-                  <use xlink:href="#faq-arrow"></use>
-                </svg>
-              </button>
-              <ul class="dropdown__list">
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">По цене</a>
+            <div class="filter__item">
+              <button class="filter__btn small" data-value="По дате добавления">По дате добавления</button>
+              <ul class="filter__list">
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="По цене">По цене</a>
                 </li>
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">По площади</a>
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="По площади">По площади</a>
                 </li>
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">По дате добавления</a>
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="По дате добавления">По дате добавления</a>
                 </li>
               </ul>
             </div>
-            <div class="dropdown filter__item">
-              <button class="filter__btn small">Показать: <span>10</span>
-                <svg class="faq__item-arrow">
-                  <use xlink:href="#faq-arrow"></use>
-                </svg>
-              </button>
-              <ul class="dropdown__list">
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">10</a>
+            <div class="filter__item">
+              <button class="filter__btn small" data-value="10">Показать: 10</button>
+              <ul class="filter__list">
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="10">10</a>
                 </li>
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">20</a>
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="20">20</a>
                 </li>
-                <li class="dropdown__item">
-                  <a class="dropdown__item-link small" href="#!">30</a>
+                <li class="filter__list-item">
+                  <a class="filter__list-link small" href="#!" data-value="30">30</a>
                 </li>
               </ul>
             </div>
