add vacancies pages

--- a/app/pages/vacancies.html
+++ b/app/pages/vacancies.html
@@ -30,7 +30,7 @@
           <div class="vacancies__items">
             <div class="vacancies__item">
               <div class="vacancies__head">
-                <img class="vacancies__head-img" src="images/page vacancies/builder-finisher.png"
+                <img class="vacancies__head-img" src="images/page-vacancies/builder-finisher.png"
                   alt="builder-finisher">
                 <div class="vacancies__head-title">
                   <h3 class="vacancies__head-speciality">Строитель-отделочник</h3>
