--- a/app/pages/works.html
+++ b/app/pages/works.html
@@ -75,7 +75,7 @@
         <div class="works__items">
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-1.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-1.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-178</h3>
@@ -115,7 +115,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-2.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-2.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-124</h3>
@@ -155,7 +155,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-3.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-3.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-211</h3>
@@ -195,7 +195,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-3.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-4.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-84</h3>
@@ -235,7 +235,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-2.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-2.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-124</h3>
@@ -275,7 +275,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-1.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-1.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-178</h3>
@@ -315,7 +315,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-3.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-3.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-84</h3>
@@ -355,7 +355,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-3.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-4.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-211</h3>
@@ -395,7 +395,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-1.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-1.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-178</h3>
@@ -435,7 +435,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page works/works-2.png" alt="works">
+              <img class="works__item-img" src="images/page-works/works-2.png" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-124</h3>
