adaptive & add script & fix slider

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -70,8 +70,8 @@
                     для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 </div>
                 <div class="case__btns">
-                  <button class="btn-green">Оставить заявку</button>
-                  <button class="btn-white">Что входит в постройку</button>
+                  <button class="case__btn btn-green">Оставить заявку</button>
+                  <button class="case__btn btn-white">Что входит в постройку</button>
                 </div>
               </div>
             </div>
@@ -118,8 +118,8 @@
                     для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 </div>
                 <div class="case__btns">
-                  <button class="btn-green">Оставить заявку</button>
-                  <button class="btn-white">Что входит в постройку</button>
+                  <button class="case__btn btn-green">Оставить заявку</button>
+                  <button class="case__btn btn-white">Что входит в постройку</button>
                 </div>
               </div>
             </div>
@@ -166,8 +166,8 @@
                     для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 </div>
                 <div class="case__btns">
-                  <button class="btn-green">Оставить заявку</button>
-                  <button class="btn-white">Что входит в постройку</button>
+                  <button class="case__btn btn-green">Оставить заявку</button>
+                  <button class="case__btn btn-white">Что входит в постройку</button>
                 </div>
               </div>
             </div>
@@ -216,8 +216,8 @@
                     для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 </div>
                 <div class="case__btns">
-                  <button class="btn-green">Оставить заявку</button>
-                  <button class="btn-white">Что входит в постройку</button>
+                  <button class="case__btn btn-green">Оставить заявку</button>
+                  <button class="case__btn btn-white">Что входит в постройку</button>
                 </div>
               </div>
             </div>
@@ -264,8 +264,8 @@
                     для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 </div>
                 <div class="case__btns">
-                  <button class="btn-green">Оставить заявку</button>
-                  <button class="btn-white">Что входит в постройку</button>
+                  <button class="case__btn btn-green">Оставить заявку</button>
+                  <button class="case__btn btn-white">Что входит в постройку</button>
                 </div>
               </div>
             </div>
@@ -312,8 +312,8 @@
                     для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 </div>
                 <div class="case__btns">
-                  <button class="btn-green">Оставить заявку</button>
-                  <button class="btn-white">Что входит в постройку</button>
+                  <button class="case__btn btn-green">Оставить заявку</button>
+                  <button class="case__btn btn-white">Что входит в постройку</button>
                 </div>
               </div>
             </div>
@@ -504,16 +504,19 @@
 
   <div class="banner block">
     <div class="container">
-      <div class="banner__inner" style="background-image: url(images/banner.png);">
+      <div class="banner__inner">
         <div class="banner__item">
           <h5 class="banner__suptitle">Успей подписать договор до конца февраля и получи</h5>
           <h2 class="banner__title">Индивидуальный проект дома</h2>
         </div>
         <div class="banner__item">
-          <img class="banner__img" src="images/ribbon.png" alt="">
-          <h2 class="banner__item-title">БЕСПЛАТНО</h2>
-          <button class="btn-green banner__item-btn menu-2">Получить проект дома</button>
+          <img class="banner__img" src="images/ribbon.png" alt="ribbon">
+          <div class="banner__content">
+            <h2 class="banner__title">БЕСПЛАТНО</h2>
+            <button class="banner__btn btn-green menu-2">Получить проект дома</button>
+          </div>
         </div>
+        <img class="banner__bg" src="../images/banner-texture.png" alt="banner">
       </div>
     </div>
   </div>
@@ -529,9 +532,7 @@
         </div>
 
         <div class="advantages__block">
-          <div class="advantages__cover">
-            <img class="advantages__img" src="images/advantages-cover1.png" alt="cover">
-          </div>
+          <img class="advantages__img" src="images/advantages-cover1.png" alt="cover">
 
           <ul class="advantages__list">
             <li class="advantages__item">
@@ -588,9 +589,7 @@
               </div>
             </li>
           </ul>
-          <div class="advantages__cover">
-            <img class="advantages__img" src="images/advantages-cover2.png" alt="cover">
-          </div>
+          <img class="advantages__img" src="images/advantages-cover2.png" alt="cover">
         </div>
       </div>
     </div>
@@ -783,6 +782,10 @@
                   <li class="projects__options-item">
                     <img class="projects__options-img" src="images/сортиры.svg" alt="wc">
                     <p>2 санузла</p>
+                  </li>
+                  <li class="projects__options-item projects__options-info" id="projects-info">
+                    <img class="projects__options-img" src="../images/info.svg" alt="info">
+                    <p>Инфо</p>
                   </li>
                 </ul>
               </div>
